# violet-poolController-api

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  RELEASE_NOTES_v0.0.10.md  RELEASE_NOTES_v0.0.11.md  RELEASE_NOTES_v0.0.12.md  RELEASE_NOTES_v0.0.2.md  RELEASE_NOTES_v0.0.5.md  RELEASE_NOTES_v0.0.6.md  RELEASE_NOTES_v0.0.7.md  RELEASE_NOTES_v0.0.8.md  RELEASE_NOTES_v0.0.9.md  WIKI.md  manual.txt  patch.diff  patch_fix.diff  patch_tests.diff  pyproject.toml  setup.py  tox.ini
.github/: dependabot.yml
.github/scripts/: release_version.py
.github/workflows/: ci.yml  dev-release.yml  docs.yml  pages.yml  python-publish.yml  release.yml  update-wiki.yml  wiki-sync.yml
docs/: API_REFERENCE.md  Advanced-Topics.md  Configuration-&-Calibration.md  Controlling-Devices.md  Dosing-&-Targets.md  Fetching-Data.md  HA_ADDON_REFERENCE.md  Home.md  Initialization-&-Authentication.md  Installation.md  index.html
docs/de/: Initialization-&-Authentication.md
tests/: conftest.py  mock_server.py  test_api.py  test_api_smoke.py  test_circuit_breaker.py  test_mock_server.py  test_parsers.py  test_rate_limiter.py  test_readings.py  test_sanitizer.py
violet_poolcontroller_api/: __init__.py  _api_dosing.py  _api_mixin.py  _api_model.py  _api_outputs.py  _api_readings.py  _api_system.py  api.py  circuit_breaker.py  const_api.py  const_devices.py  parsers.py  readings.py  utils_rate_limiter.py  utils_sanitizer.py
