[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "violet-poolController-api"
version = "0.0.1"
authors = [
  { name="Basti (Xerolux)", email="git@xerolux.de" },
]
description = "Asynchronous Python client for the Violet Pool Controller."
readme = "README.md"
requires-python = ">=3.12"
license = "AGPL-3.0-or-later"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Home Automation",
]
dependencies = [
    "aiohttp>=3.9.0",
]

[project.urls]
"Homepage" = "https://github.com/Xerolux/violet-poolController-api"
"Bug Tracker" = "https://github.com/Xerolux/violet-poolController-api/issues"
"License" = "https://www.gnu.org/licenses/agpl-3.0.html"
